# content-guard

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.yml  config.yml
.github/workflows/: ci.yml  publish.yml
docs/: DOGFOOD_RESULTS.md  GIT_PUBLIC_REPO_GUARD.md
docs/superpowers/plans/: 2026-06-09-hardening-hygiene.md
docs/superpowers/specs/: 2026-06-09-hardening-hygiene-design.md
examples/n8n-validation/: warn-review-email.json
hooks/: pre-push
openclaw-plugin/: README.md
policies/: private-repo.local.example.json
scripts/: verify
src/content_guard/: allowlist.py  audit.py  baseline.py  cli.py  engine.py  git_scan.py  n8n_advisory.py  n8n_validate.py  policy.py  pr_draft.py  pr_prepare.py  publish_check.py  rules.py
tests/: test_allow_cli.py  test_allow_values.py  test_audit.py  test_baseline.py  test_cli.py  test_engine.py  test_rules.py
